update new blogs

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -127,3 +127,60 @@
     filter: invert(1);
   }
 }
+
+.pagination {
+  display: flex;
+  justify-content:right;
+  align-items: center;
+  list-style: none;
+ }
+ 
+ .pageLink {
+  cursor: pointer;
+ }
+ 
+ /* pagination pageItem */
+ .pageItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #eaeaea;
+  /* border-radius: 0.5rem; */
+  cursor: pointer;
+  font-weight: 500;
+    padding: 8px 15px;
+    margin-right: 5px;
+    font-size:20px;
+ }
+ 
+ /* pagination page item when active */
+ .pageItemActive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #eaeaea;
+  /* border-radius: 0.5rem; */
+  cursor: pointer;
+  background-color:#1d3557;
+  font-weight: 500;
+    padding: 8px 15px;
+    margin-right: 5px;
+    font-size:20px;
+ }
+@media (prefers-color-scheme: dark) {
+  .card,
+  .footer {
+    border-color: #222;
+  }
+  .code {
+    background: #111;
+  }
+  .logo img {
+    filter: invert(1);
+  }
+}
+
