--- a/styles/globals.css
+++ b/styles/globals.css
@@ -305,9 +305,10 @@ section {
 .header.header-scrolled {
   background: #fff;
   padding: 5px 30px;
-  box-shadow: var(--shadow-medium);
+  /* box-shadow: var(--shadow-medium);
   -moz-box-shadow: var(--shadow-medium);
-  -webkit-box-shadow: var(--shadow-medium);
+  -webkit-box-shadow: var(--shadow-medium); */
+  box-shadow: 0 100px 80px rgba(22,61,151,.07), 0 41.7776px 33.4221px rgba(22,61,151,.05), 0 22.3363px 17.869px rgba(22,61,151,.042), 0 12.5216px 10.0172px rgba(22,61,151,.035), 0 6.6501px 5.32008px rgba(22,61,151,.028), 0 2.76726px 2.21381px rgba(22,61,151,.02);
 }
 .blog .sidebar .search-form form button i,
 .header .logo {
