--- a/styles/globals.css
+++ b/styles/globals.css
@@ -963,7 +963,7 @@ section {
   }
 }
 .btn-custom-1 {
-  margin-top: 30px !importantx;
+  margin-top: 30px !important;
   padding: 0.6rem 1.3rem !important;
   border-radius: 5px !important;
   color: #fff !important;
