update new page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,6 +101,9 @@ img {
   height: auto;
   max-width: 100%;
 }
+.custom-p-001 ul li{
+  margin-bottom:10px
+}
 svg {
   width: 1rem;
   height: 1rem;
