--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3632,7 +3632,7 @@ section {
 .services_siltion .icon-box:hover .action_link {
   cursor: pointer;
 }
-.square-flip {
+/* .square-flip {
   -webkit-perspective: 1000;
   -moz-perspective: 1000;
   -ms-perspective: 1000;
@@ -3664,7 +3664,7 @@ section {
   top: 0;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-}
+} */
 .square-container,
 .square-container2 {
   padding: 40px;
