--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4933,6 +4933,9 @@ section {
   font-size: 16px;
   font-weight: 400;
 }
+.box-6-pics img{
+  cursor: pointer;
+}
 .box-6 .box-6-bottom h4,
 .cintent-right-001 h3,
 .webinet-join-event .left .bottom .wrpper-bott .bottom-right h4 {
