--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   scroll-behavior: smooth;
   --color-black: hsl(204deg 79% 24%);
@@ -18,8 +19,8 @@
 }
 body {
   font-family: Inter, sans-serif !important;
-  color: #444;
-  font-size: 1.125rem;
+  color: #444 ;
+  font-size: 1.125rem ;
 }
 .btn-welcome,
 .navbar-mobile .dropdown > .dropdown-active,
