--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3030,6 +3030,7 @@ section {
   background: url(/img/Group-bg678.jpg) center center/cover no-repeat fixed;
   position: relative;
   padding-top: 80px;
+  background-color: #2d4567;
 }
 .mar-back,
 .new-bg-upgrade {
