--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8862,6 +8862,12 @@ ul.checkmark li {
     margin-bottom: 30px;
 }
 .blogs-content ul li,.blogs-content ul li p,.blogs-content ul li a,.blogs-content ul li p a{font-size: 18px;    letter-spacing: 0.02px;}
+.blogs-content h3 ol li,.blogs-content h3 ul li{
+  font-size:24px
+}
+.blogs-content h3 ol,.blogs-content h3 ul {
+  margin-bottom: -15px;
+}
 .blogs-content ul li p{}
 .blogs-content ul li a{}
 .blogs-content ul li p a{}
