update new page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -304,14 +304,14 @@ section {
   opacity: 1;
 }
 .header {
-  transition: 0.5s;
+  transition: 0.5s all ease;
   z-index: 997;
-  padding: 20px 30px;
+  padding: 15px 30px;
 }
 .fixed-top,
 .header.header-scrolled {
   background: #fff;
-  padding: 5px 30px;
+  padding: 15px 30px;
   /* box-shadow: var(--shadow-medium);
   -moz-box-shadow: var(--shadow-medium);
   -webkit-box-shadow: var(--shadow-medium); */
