--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ body {
   font-family: Inter, sans-serif !important;
   color: #444 ;
   font-size: 1.125rem ;
+  line-height: 1.6;
 }
 .btn-welcome,
 .navbar-mobile .dropdown > .dropdown-active,
@@ -35,7 +36,7 @@ svg {
 }
 .finace-acc .accordion-item span,
 body {
-  letter-spacing: 0.6px;
+  /* letter-spacing: 0.6px; */
 }
 .breadcrumbs ol a:hover,
 .extr-cont span a:hover {
@@ -140,7 +141,7 @@ section {
 .section-header p {
   padding: 0;
   font-size: 17px;
-  line-height: 26px;
+ 
   font-weight: 400;
   color: var(--color-grey);
 }
@@ -1011,7 +1012,7 @@ section {
   color: var(--color-blue);
   font-weight: 600;
   font-size: 20px;
-  line-height: 26px;
+ 
 }
 .figer-box .over-layer-cont {
   position: absolute;
@@ -1323,7 +1324,7 @@ section {
   list-style: none;
   color: #444;
   text-align: left;
-  line-height: 26px;
+ 
   font-size: 16px;
   margin-bottom: 25px;
 }
@@ -1851,7 +1852,7 @@ section {
   font-style: italic;
   font-size: 14px;
   padding-top: 15px;
-  line-height: 26px;
+ 
   color: #5e5e5e;
 }
 .team .member:hover {
@@ -2513,7 +2514,7 @@ section {
   font-size: 14px;
 }
 .footer .footer-top .footer-contact p {
-  line-height: 26px;
+ 
 }
 .footer .copyright {
   text-align: left;
@@ -5309,7 +5310,7 @@ section {
 }
 .wr-in .number-st {
   box-shadow: 5px 5px 10px 0 rgb(22 92 196 / 16%);
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
   background: #fff;
   width: 56px;
   height: 56px;
@@ -6345,14 +6346,14 @@ margin-top:-130px !important
   color: var(--color-blue);
   font-size:18px;
   font-weight:600;
-  letter-spacing: 0px;
+  /* letter-spacing: 0px; */
   line-height: 1.2;
 }
 .card-ds-slide .card-title.power-title{margin-bottom: 15px;}
 .card-ds-slide .card-text{
   font-size: 16px;
   color: #000;
-  letter-spacing: 0px;
+  /* letter-spacing: 0px; */
   line-height: 1.3;
 }
 .card-ds-slide .card-body{
@@ -8722,7 +8723,7 @@ ul.checkmark li {
 .sub-head p{
   font-size: 16px;
   line-height: 1.38;
-  letter-spacing: 0.02px;
+  /* letter-spacing: 0.02px; */
   margin-bottom: 40px;
 }
 
@@ -8831,7 +8832,7 @@ ul.checkmark li {
 .blogs-content p{
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.02px;
+  /* letter-spacing: 0.02px; */
   color: #273266;
   margin-bottom: 30px;
 }
@@ -8840,7 +8841,7 @@ ul.checkmark li {
   font-weight: 600;
   line-height: 1.25;
   color: #1d3557;
-  letter-spacing: 0.05px;
+  /* letter-spacing: 0.05px; */
   margin-bottom: 30px;
 }
 .blogs-content h3{
@@ -8848,7 +8849,7 @@ ul.checkmark li {
   font-weight: 600;
   line-height: 1.25;
   color: #1d3557;
-  letter-spacing: 0.05px;
+  /* letter-spacing: 0.05px; */
   margin-bottom: 30px;
 }
 .blogs-content h4{}
@@ -8857,11 +8858,13 @@ ul.checkmark li {
 .blogs-content ul{
   font-size: 18px;
     line-height: 2;
-    letter-spacing: 0.02px;
+    /* letter-spacing: 0.02px; */
     color: #273266;
     margin-bottom: 30px;
 }
-.blogs-content ul li,.blogs-content ul li p,.blogs-content ul li a,.blogs-content ul li p a{font-size: 18px;    letter-spacing: 0.02px;margin-bottom: 15px;}
+.blogs-content ul li,.blogs-content ul li p,.blogs-content ul li a,.blogs-content ul li p a{font-size: 18px;    
+  /* letter-spacing: 0.02px; */
+  margin-bottom: 15px;}
 .blogs-content h3 ol li,.blogs-content h3 ul li{
   font-size:24px
 }
@@ -8984,7 +8987,7 @@ ul.checkmark li {
   color: #fff;
   margin-bottom: 0;
   font-weight: 400;
-  letter-spacing: .5px;
+  /* letter-spacing: .5px; */
 }
 .sidebar {
   position: fixed;
