--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1305,13 +1305,33 @@ section {
   box-shadow: 0 0 30px rgba(1, 41, 112, 0.08);
   border-radius: 20px;
   position: relative;
-  overflow-y: auto;
+  overflow: hidden;
   transition: 0.3s;
-  height: 600px;
+  height: auto;
 }
 .pricing .box:hover {
   box-shadow: 0 0 30px rgba(1, 41, 112, 0.1);
 }
+.pricing .box.boc-bc-scroll ul{
+  height: 300px;
+  overflow-y: auto;
+}
+
+.pricing .box.boc-bc-scroll ul::-webkit-scrollbar {
+  width: 5px;
+}
+.pricing .box.boc-bc-scroll ul::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.pricing .box.boc-bc-scroll ul::-webkit-scrollbar-thumb {
+  background: var(--color-blue);
+}
+.pricing .box.boc-bc-scroll ul::-webkit-scrollbar-thumb:hover {
+  background: var(--color-red);
+}
+
+
+
 .pricing h3,
 .pricing h4 {
   font-weight: 500;
@@ -8043,6 +8063,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1c2d47",endCo
   }
 }
 @media (min-width: 768px) and (max-width: 1200px) {
+
   .contact-list .content-right {
     font-size: 14px;
   }
@@ -8380,6 +8401,9 @@ ul.checkmark li {
 }
 
 @media (max-width: 992px){
+  .pricing .box.boc-bc-scroll ul{
+    height:auto
+  }
   .repet-col .cont h3 {
     margin-bottom: 15px;
 }
