--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6808,6 +6808,30 @@ font-weight:400
 .sty-newd p{}
 .sty-newd ul li{}
 
+.code-list{}
+.code-list ul{
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    list-style: none;
+    padding-left: 0;
+}
+.code-list ul li{
+  text-align: center;
+    font-size: 28px;
+    color: var(--color-red);
+    font-weight: 700;
+}
+.code-list ul li span{
+  display: block;
+  margin: 10px 5px;
+  font-size: 18px;
+  font-weight: 400;
+    color: #585858;
+    line-height: 1.3;
+}
+
 
 
 @media (min-width: 991px) {
